--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-br-forms/cpf-cnpj-mask": "^1.0.6",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "ng2-currency-mask": "^11.0.0",
     "react": "^17.0.2",
+    "react-currency-format": "^1.0.0",
+    "react-currency-masked-input": "^2.5.0",
     "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.2.0",
