--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "axios": "^0.21.1",
     "ng2-currency-mask": "^11.0.0",
     "react": "^17.0.2",
+    "react-credit-card-input": "^1.1.5",
     "react-currency-format": "^1.0.0",
     "react-currency-masked-input": "^2.5.0",
     "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
